--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
 --body-font: 'Open Sans', sans-serif;
 background: var(--violet) url(images/bg-desktop.svg);
 background-size:170vh;
+color: white; 
+overflow: hidden;
 }
 
 * {
@@ -13,13 +15,77 @@ margin: 0;
 padding: 0; 
 }
 
+.container {
+    max-width: 1440px;
+    margin: 30px auto;
+    padding: 5rem;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 1rem;
+    
+}
+
+.image-section {
+    margin-bottom: 100px;
+    
+}
+.image-section .logo {
+    margin-bottom: 50px;
+}
+.info-section {
+    margin-top:5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* margin-bottom: 60px; */
+    
+}
+
+.info-section h1 {
+    font-family: var(--heading-font);
+    padding-bottom: 20px;
+    margin: 0;
+}
+.info-section p {
+    font-family: var(--body-font);
+    font-size: 15px;
+    line-height: 1.8;
+    padding: 0;
+    margin: 0;
+}
+button {
+    width: 50%;
+    border-radius: 50px;
+    font-family: var(--body-font);
+    color:hsl(257, 40%, 49%);
+    padding: 1rem;
+    font-size: 13px;
+    margin-top: 1rem;
+
+}
+button:hover {
+    background-color: var(--soft-magenta);
+    border: none;
+    cursor: pointer;
+}
+.info-section .link-icons {
+    text-align: right;
+
+    margin-top: 7rem;
+    
+}
+
+.link-icons .fa-brands {
+    font-size: 2rem;
+    margin-left: 8px;
+    color: white;
+}
+.link-icons .fa-brands:hover {
+    color: var(--soft-magenta);
+    cursor: pointer;
+}
+
 /* poppins 400 600
 open sans 400 
 
-facebook  <i class="fa-brands fa-facebook-square"></i>
-
-twitter <i class="fa-brands fa-twitter-square"></i>
-
-instagram  <i class="fa-brands fa-instagram-square"></i>
-*/
 
